src/objects/How_To__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article to detail and communicate how to properly complete specific tasks required for LZ EE to do their specific job</description>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>For manual entry of due date by content developer</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <label>External Links</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAQ__c</fullName>
        <description>FAQs about this Process Policy or System</description>
        <label>FAQ</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <label>Internal</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <description>Keywords about this process policy or system</description>
        <label>Keywords</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overview__c</fullName>
        <description>Overview of the process policy or system</description>
        <label>Overview</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedures__c</fullName>
        <description>Procedures for this process policy or system</description>
        <label>Procedure/Process</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose of this alert</description>
        <label>Purpose</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reminders_Quick_Tips__c</fullName>
        <description>Reminders and quick tips about this process, policy or system</description>
        <label>Reminders/Quick-Tips</label>
        <length>128000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>How To</label>
    <pluralLabel>How To</pluralLabel>
</CustomObject>